[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "yolov5_onnx_cv"
version = "0.0.1"
authors = [
  { name="BruceYang", email="brucech.yang@adlinktech.com" },
]
description = "YOLOv5 ONNX example by OpenCV DNN."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
  'opencv-python >= 4.4.0.40',
  'numpy >= 1.22.0'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"