[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "yolov5_onnx_cv"
version = "0.0.4"
authors = [
  { name="BruceYang", email="brucefay1115@gmail.com" },
]
description = "YOLOv5 ONNX example by OpenCV DNN."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  'opencv-python >= 4.4.0.40',
  'numpy >= 1.19.5'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brucefay1115/yolov5_onnx_cv"